--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "toastr": "~2.0.3",
     "underscore": "~1.7.0",
     "bootstrap": "~3.2.0",
-    "angular-sanitize": "~1.2.25"
+    "angular-sanitize": "~1.2.25",
+    "components-font-awesome": "~4.2.0"
   }
 }
