--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "underscore": "~1.7.0",
     "bootstrap": "~3.2.0",
     "angular-sanitize": "~1.2.25",
-    "components-font-awesome": "~4.2.0"
+    "components-font-awesome": "~4.2.0",
+    "jquery.easing": "~1.3.1"
   }
 }
