--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,10 @@
     "angular-mocks": "~1.2.24",
     "angular-local-storage": "~0.1.3",
     "jquery.cycle2.min": "https://raw.github.com/malsup/malsup.github.com/master/min/jquery.cycle2.min.js",
-    "html5shiv": "~3.7.2"
+    "html5shiv": "~3.7.2",
+    "spin.js": "~2.0.1",
+    "bootbox": "~4.3.0",
+    "bootstrap": "~3.2.0"
   },
   "dependencies": {
     "toastr": "~2.0.3",
