--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "html5shiv": "~3.7.2",
     "spin.js": "~2.0.1",
     "bootbox": "~4.3.0",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "angular-animate": "~1.3.2"
   },
   "dependencies": {
     "toastr": "~2.0.3",
