--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "spin.js": "~2.0.1",
     "bootbox": "~4.3.0",
     "bootstrap": "~3.2.0",
+    "modernizr": "~2.8.3",
+    "unveil": "~1.3.0"
   },
   "dependencies": {
     "toastr": "~2.0.3",
